# vaa

./: .gitignore  .travis.yml  README.md  pyproject.toml
tests/: test_auto.py  test_marshmallow.py  test_simple.py  test_validators.py
tests/validators/: djpost.py  post.py  pre.py
va/: __init__.py  _aliases.py  _external.py  _interface.py  _internal.py
vaa/: __init__.py  _aliases.py  _auto.py  _django_utils.py  _error.py  _external.py  _internal.py
