[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "vaa"
author = "Gram Orsinium"
author-email = "master_fess@mail.ru"
home-page = "https://github.com/life4/vaa"
description-file = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.flit.metadata.requires-extra]
tests = [
  "pytest",
]
validators = [
  "cerberus",
  "django",
  "djangorestframework",
  "marshmallow>=3.0.1",
  "pyschemes",
  "wtforms",
]

[tool.dephell.main]
from = {format = "flit", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
tag = "v."

[tool.dephell.pytest]
from = {format = "flit", path = "pyproject.toml"}
envs = ["main", "tests", "validators"]
command = "python -m pytest tests/"

[tool.dephell.flake8]
from = {format = "pip", path = "requirements-flake.txt"}
python = ">=3.6"
command = "flake8"
